unpackaged/main/default/objects/Trial_Request__c/Trial_Request__c.object-meta.xml
<CustomObject>
    <description>Custom object to capture all trials and other forms of inbound requests</description>
    <label>Inbound Request</label>
    <nameField>
        <displayFormat>TR-{000000000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>