unpackaged/main/default/objects/Trial_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inbound Requests</relationshipLabel>
    <relationshipName>Inbound_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>