unpackaged/main/default/objects/Trial_Request__c/fields/Account_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Case_Safe_ID__c</fullName>
    <formula>CASESAFEID(Contact__r.AccountId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account Casesafe ID</inlineHelpText>
    <label>Account Case Safe ID</label>
    <type>Text</type>
</CustomField>