unpackaged/main/default/objects/Trial_Request__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inbound Requests (Account)</relationshipLabel>
    <relationshipName>Inbound_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>