unpackaged/main/default/objects/Trial_Request__c/fields/Acquisition_Program__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Program__c</fullName>
    <label>Acquisition Program</label>
    <length>150</length>
    <type>Text</type>
</CustomField>