unpackaged/main/default/objects/Trial_Request__c/fields/Activated_At__c.field-meta.xml
<CustomField>
    <fullName>Activated_At__c</fullName>
    <description>Date and time when the trial was activated</description>
    <inlineHelpText>Date and time when the trial was activated</inlineHelpText>
    <label>Activated At</label>
    <type>DateTime</type>
</CustomField>