unpackaged/main/default/objects/Trial_Request__c/fields/Campaign_Content__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Content__c</fullName>
    <label>Campaign Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>