unpackaged/main/default/objects/Trial_Request__c/fields/Campaign_Medium__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Medium__c</fullName>
    <label>Campaign Medium</label>
    <length>100</length>
    <type>Text</type>
</CustomField>