unpackaged/main/default/objects/Trial_Request__c/fields/Campaign_Term__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Term__c</fullName>
    <label>Campaign Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>