unpackaged/main/default/objects/Trial_Request__c/fields/Consent_to_Processing__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Form fill out consent field</description>
    <label>Consent to Processing</label>
    <type>Checkbox</type>
</CustomField>