unpackaged/main/default/objects/Trial_Request__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce Contact record associated with the trial request</description>
    <inlineHelpText>Salesforce Contact record associated with the trial request</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Trial_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>