unpackaged/main/default/objects/Trial_Request__c/fields/Contact_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Account_Id__c</fullName>
    <formula>CASESAFEID( Contact__r.AccountId )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reflects the Account ID related to the Contact</inlineHelpText>
    <label>Contact Account Id</label>
    <type>Text</type>
</CustomField>