unpackaged/main/default/objects/Trial_Request__c/fields/Contact_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Case_Safe_ID__c</fullName>
    <formula>CASESAFEID(Contact__c)</formula>
    <label>Contact Case Safe ID</label>
    <type>Text</type>
</CustomField>