unpackaged/main/default/objects/Trial_Request__c/fields/CPACharge_Marketing_Engagement__c.field-meta.xml
<CustomField>
    <fullName>CPACharge_Marketing_Engagement__c</fullName>
    <label>CPACharge Marketing Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>