unpackaged/main/default/objects/Trial_Request__c/fields/cRO1__c.field-meta.xml
<CustomField>
    <fullName>cRO1__c</fullName>
    <description>Hidden field from form submission</description>
    <label>cRO1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>