unpackaged/main/default/objects/Trial_Request__c/fields/cRO2__c.field-meta.xml
<CustomField>
    <fullName>cRO2__c</fullName>
    <description>Hidden field from form submission</description>
    <label>cRO2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>