unpackaged/main/default/objects/Trial_Request__c/fields/cRO3__c.field-meta.xml
<CustomField>
    <fullName>cRO3__c</fullName>
    <description>Hidden field from form submission</description>
    <label>cRO3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>