unpackaged/main/default/objects/Trial_Request__c/fields/Customer_Success_Qualifying_Rep2__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Qualifying_Rep2__c</fullName>
    <label>Qualifying Rep Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>