unpackaged/main/default/objects/Trial_Request__c/fields/Daily_Pacing_Filter__c.field-meta.xml
<CustomField>
    <fullName>Daily_Pacing_Filter__c</fullName>
    <description>Evaluates to TRUE if MQL should be included for pacing</description>
    <formula>IF( 

ISBLANK(MQL_Date__c), FALSE, 
IF( DAY(MQL_Date__c) &lt;= DAY(TODAY()), TRUE, FALSE) 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Daily Pacing Filter</label>
    <type>Checkbox</type>
</CustomField>