unpackaged/main/default/objects/Trial_Request__c/fields/Days_to_SQL__c.field-meta.xml
<CustomField>
    <fullName>Days_to_SQL__c</fullName>
    <formula>IF( 

OR( 
ISBLANK( Opportunity__c ),
ISBLANK( MQL_Date__c )
), 0, 

IF( DATEVALUE(Opportunity__r.CreatedDate) &lt; MQL_Date__c, 

1, 

(DATEVALUE(Opportunity__r.CreatedDate) - MQL_Date__c)) + 1

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to SQL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>