unpackaged/main/default/objects/Trial_Request__c/fields/Demo_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_Scheduled_Date__c</fullName>
    <label>Demo Scheduled Date</label>
    <type>Date</type>
</CustomField>