unpackaged/main/default/objects/Trial_Request__c/fields/Demo_Time__c.field-meta.xml
<CustomField>
    <fullName>Demo_Time__c</fullName>
    <label>Demo Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>