unpackaged/main/default/objects/Trial_Request__c/fields/Demographic_Score__c.field-meta.xml
<CustomField>
    <fullName>Demographic_Score__c</fullName>
    <label>Demographic Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>