unpackaged/main/default/objects/Trial_Request__c/fields/Disposition_Notes__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Notes__c</fullName>
    <label>Disposition Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>