unpackaged/main/default/objects/Trial_Request__c/fields/Disposition_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Reason__c</fullName>
    <label>Disposition Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Client</fullName>
            </value>
            <value>
                <fullName>Do Not Contact</fullName>
            </value>
            <value>
                <fullName>Duplicate - Existing Customer</fullName>
            </value>
            <value>
                <fullName>Duplicate - Open Opportunity</fullName>
            </value>
            <value>
                <fullName>Is Competitor</fullName>
            </value>
            <value>
                <fullName>Junk Data</fullName>
            </value>
            <value>
                <fullName>Not in ICP</fullName>
            </value>
            <value>
                <fullName>Outside of US &amp; Canada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>