unpackaged/main/default/objects/Trial_Request__c/fields/Domain_Type__c.field-meta.xml
<CustomField>
    <fullName>Domain_Type__c</fullName>
    <label>Domain Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>