unpackaged/main/default/objects/Trial_Request__c/fields/DQ_Assigned__c.field-meta.xml
<CustomField>
    <fullName>DQ_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if request was assigned to DQ</description>
    <label>DQ Assigned</label>
    <type>Checkbox</type>
</CustomField>