unpackaged/main/default/objects/Trial_Request__c/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Employees</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>