unpackaged/main/default/objects/Trial_Request__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MyCase</fullName>
            </value>
            <value>
                <fullName>CASEpeer</fullName>
            </value>
            <value>
                <fullName>Soluno</fullName>
            </value>
            <value>
                <fullName>Woodpecker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>