unpackaged/main/default/objects/Trial_Request__c/fields/Facebook_Ad_Name__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Ad_Name__c</fullName>
    <label>Facebook Ad Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>