unpackaged/main/default/objects/Trial_Request__c/fields/Facebook_Click_ID__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Click_ID__c</fullName>
    <label>Facebook Click ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>