unpackaged/main/default/objects/Trial_Request__c/fields/Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Firm_Name__c</fullName>
    <description>Name of the firm requesting a trial</description>
    <label>Firm Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>