unpackaged/main/default/objects/Trial_Request__c/fields/Firm_UUID__c.field-meta.xml
<CustomField>
    <fullName>Firm_UUID__c</fullName>
    <description>Firm UUID when trial is created</description>
    <externalId>true</externalId>
    <inlineHelpText>Firm UUID when trial is created</inlineHelpText>
    <label>Firm UUID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>