unpackaged/main/default/objects/Trial_Request__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>First name of the person requesting a trial</description>
    <label>First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>