unpackaged/main/default/objects/Trial_Request__c/fields/Historical__c.field-meta.xml
<CustomField>
    <fullName>Historical__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Notes that request was historical and should not trigger automation</description>
    <label>Historical</label>
    <type>Checkbox</type>
</CustomField>