unpackaged/main/default/objects/Trial_Request__c/fields/Inbound_Request_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Request_Case_Safe_ID__c</fullName>
    <description>\</description>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Inbound Request Casesafe ID</inlineHelpText>
    <label>Inbound Request Case Safe ID</label>
    <type>Text</type>
</CustomField>