unpackaged/main/default/objects/Trial_Request__c/fields/Inbound_Request_Score__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Request_Score__c</fullName>
    <label>Inbound Request Score</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>