unpackaged/main/default/objects/Trial_Request__c/fields/Intent__c.field-meta.xml
<CustomField>
    <fullName>Intent__c</fullName>
    <label>Intent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LPMS</fullName>
            </value>
            <value>
                <fullName>Features</fullName>
            </value>
            <value>
                <fullName>Setup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>