unpackaged/main/default/objects/Trial_Request__c/fields/Intent_Summary__c.field-meta.xml
<CustomField>
    <fullName>Intent_Summary__c</fullName>
    <formula>CASE( Intent__c,

&quot;LPMS&quot;, &quot;Learn what practice management software is and how it can help me&quot;,
&quot;Features&quot;, &quot;Understand MyCase features and see if it is the best fit for me&quot;,
&quot;Setup&quot;, &quot;I&#39;m ready to use MyCase and want to get up and running&quot;,

IF( TEXT(Trial_Status__c) = &quot;Activated&quot;, &quot;No intent provided&quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intent Summary</label>
    <type>Text</type>
</CustomField>