unpackaged/main/default/objects/Trial_Request__c/fields/Interested_Feature_2__c.field-meta.xml
<CustomField>
    <fullName>Interested_Feature_2__c</fullName>
    <description>Top features selected by trial requester when trial is activated</description>
    <inlineHelpText>Top features selected by trial requester when trial is activated</inlineHelpText>
    <label>Interested Feature 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Management</fullName>
            </value>
            <value>
                <fullName>Document Management</fullName>
            </value>
            <value>
                <fullName>Billing &amp; Invoicing</fullName>
            </value>
            <value>
                <fullName>Intake Management</fullName>
            </value>
            <value>
                <fullName>Client Communication</fullName>
            </value>
            <value>
                <fullName>Time Tracking</fullName>
            </value>
            <value>
                <fullName>Document Automation</fullName>
            </value>
            <value>
                <fullName>Task Automation</fullName>
            </value>
            <value>
                <fullName>Calendaring &amp; Deadlines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>