unpackaged/main/default/objects/Trial_Request__c/fields/Internal__c.field-meta.xml
<CustomField>
    <fullName>Internal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when trial is created by an internal user for testing</description>
    <inlineHelpText>Checked when trial is created by an internal user for testing</inlineHelpText>
    <label>Internal</label>
    <type>Checkbox</type>
</CustomField>