unpackaged/main/default/objects/Trial_Request__c/fields/International_Phone__c.field-meta.xml
<CustomField>
    <fullName>International_Phone__c</fullName>
    <label>International Phone</label>
    <type>Phone</type>
</CustomField>