unpackaged/main/default/objects/Trial_Request__c/fields/Is_MQL__c.field-meta.xml
<CustomField>
    <fullName>Is_MQL__c</fullName>
    <formula>IF( ISBLANK( MQL_Date__c), FALSE, 
IF(ISPICKVAL(Type__c, &quot;CSQL&quot;), FALSE,
TRUE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is MQL</label>
    <type>Checkbox</type>
</CustomField>