unpackaged/main/default/objects/Trial_Request__c/fields/Junk__c.field-meta.xml
<CustomField>
    <fullName>Junk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if inbound request firm name evaluates to junk term and no email will be sent</description>
    <label>Junk</label>
    <type>Checkbox</type>
</CustomField>