unpackaged/main/default/objects/Trial_Request__c/fields/Last_Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>Last_Landing_Page__c</fullName>
    <label>Last Landing Page</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>