unpackaged/main/default/objects/Trial_Request__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Last name of the person requesting a trial</description>
    <label>Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>