unpackaged/main/default/objects/Trial_Request__c/fields/Last_Touch_Program__c.field-meta.xml
<CustomField>
    <fullName>Last_Touch_Program__c</fullName>
    <label>Last Touch Program</label>
    <length>250</length>
    <type>Text</type>
</CustomField>