unpackaged/main/default/objects/Trial_Request__c/fields/LawPay_Rep__c.field-meta.xml
<CustomField>
    <fullName>LawPay_Rep__c</fullName>
    <label>LawPay Rep</label>
    <length>100</length>
    <type>Text</type>
</CustomField>