unpackaged/main/default/objects/Trial_Request__c/fields/LawPay_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>LawPay_Rep_Email__c</fullName>
    <label>LawPay Rep Email</label>
    <type>Email</type>
</CustomField>