unpackaged/main/default/objects/Trial_Request__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce Lead record associated with the trial request</description>
    <inlineHelpText>Salesforce Lead record associated with the trial request</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Trial_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>