unpackaged/main/default/objects/Trial_Request__c/fields/Lead_Contact__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contact__c</fullName>
    <formula>IF( ISBLANK( Contact__c ),

HYPERLINK( &quot;/&quot; &amp; Lead__c, Lead__r.Full_Name__c ),

HYPERLINK( &quot;/&quot; &amp; Contact__c, Contact__r.Contact_Full_Name__c	 )
			
			)</formula>
    <label>Person</label>
    <type>Text</type>
</CustomField>