unpackaged/main/default/objects/Trial_Request__c/fields/Lead_Is_Converted__c.field-meta.xml
<CustomField>
    <fullName>Lead_Is_Converted__c</fullName>
    <formula>Lead__r.IsConverted</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Is Converted</label>
    <type>Checkbox</type>
</CustomField>