unpackaged/main/default/objects/Trial_Request__c/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <description>Hidden field from form submission</description>
    <label>LeadSource</label>
    <length>100</length>
    <type>Text</type>
</CustomField>