unpackaged/main/default/objects/Trial_Request__c/fields/LinkedIn_Ad_Name__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Ad_Name__c</fullName>
    <label>LinkedIn Ad Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>