unpackaged/main/default/objects/Trial_Request__c/fields/Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Inbound Requests</relationshipLabel>
    <relationshipName>Inbound_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>