unpackaged/main/default/objects/Trial_Request__c/fields/Marketing_Test__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Test__c</fullName>
    <description>This is used by Marketing to report on results of experiments and form tests on the website. It is used on an ad hoc basis to support the campaign or experiment on hand at the time.</description>
    <label>Marketing Test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>