unpackaged/main/default/objects/Trial_Request__c/fields/Microsoft_Click_ID__c.field-meta.xml
<CustomField>
    <fullName>Microsoft_Click_ID__c</fullName>
    <label>Microsoft Click ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>