unpackaged/main/default/objects/Trial_Request__c/fields/Monthly_Pacing__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Pacing__c</fullName>
    <formula>IF(
   DAY(Request_Date__c) &lt;= DAY(TODAY()), TRUE, FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Pacing</label>
    <type>Checkbox</type>
</CustomField>