unpackaged/main/default/objects/Trial_Request__c/fields/MQA_Buying_Stage__c.field-meta.xml
<CustomField>
    <fullName>MQA_Buying_Stage__c</fullName>
    <label>MQA Buying Stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>