unpackaged/main/default/objects/Trial_Request__c/fields/MQA_Numerical_Reach_Score__c.field-meta.xml
<CustomField>
    <fullName>MQA_Numerical_Reach_Score__c</fullName>
    <label>MQA Numerical Reach Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>