unpackaged/main/default/objects/Trial_Request__c/fields/MQA_Profile_Fit__c.field-meta.xml
<CustomField>
    <fullName>MQA_Profile_Fit__c</fullName>
    <label>MQA Profile Fit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>