unpackaged/main/default/objects/Trial_Request__c/fields/MQA_Reach_Score__c.field-meta.xml
<CustomField>
    <fullName>MQA_Reach_Score__c</fullName>
    <label>MQA Reach Score</label>
    <length>80</length>
    <type>Text</type>
</CustomField>