unpackaged/main/default/objects/Trial_Request__c/fields/MQA_Segment__c.field-meta.xml
<CustomField>
    <fullName>MQA_Segment__c</fullName>
    <label>MQA Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>